Mon Aug 27 08:27:21 MDT 2001 John Fleck <jfleck@inkstain.net>

	* adding doc/xsltproc.html - html generated from xsltproc.xml,
	update doc/xslt.html with link to xsltproc.html

Mon Aug 27 08:21:47 MDT 2001 John Fleck <jfleck@inkstain.net>

	* adding doc/xsltproc.xml - user manual for xsltproc
	
Sun Aug 26 20:52:02 CEST 2001 Daniel Veillard <daniel@veillard.com>

	* libxslt/numbers.c libxslt/xslt.c: removed a couple of
	  warning raised by the Windows compiler (Chris Poblete)

Fri Aug 24 01:15:24 CEST 2001 Daniel Veillard <daniel@veillard.com>

	* libxslt/functions.h libxslt/preproc.c libxslt/transform.c:
	  closed bugs #59212 and #59220

Thu Aug 23 23:18:44 CEST 2001 Daniel Veillard <daniel@veillard.com>

	* config.h.in configure.in xsltproc/xsltproc.c: complete test
	  of a DocBook XSLt transform with --nonet, need stat(), added
	  checking in configure.

Thu Aug 23 17:37:40 CEST 2001 Daniel Veillard <daniel@veillard.com>

	* xsltproc/xsltproc.c: catalog integration, cleanup with
	  the --nonet option closing #59427
	* libxslt/xslt.c: removed a small memleak when using a 
	  stylesheet PI

Tue Aug 21 13:17:19 CEST 2001 Daniel Veillard <daniel@veillard.com>

	* //Makefile.am : fixed an error I propagated to nearly all
	  Makefiles.am on Saturday

Tue Aug 21 13:10:03 CEST 2001 Daniel Veillard <daniel@veillard.com>

	* libexslt/math.c libxslt/numbers.c: use xmlXPathIsNaN() and
	  xmlXPathIsInf()
	* libxslt/pattern.c: tag a potential threading problem.

Tue Aug 21 11:18:45 CEST 2001 Bjorn Reese <breese@users.sourceforge.net>

	* libxslt/numbers.c libexslt/math.c: Re-worked NaN and Inf
	  support.

Sat Aug 18 15:57:46 CEST 2001 Daniel Veillard <daniel@veillard.com>

	* //Makefile.am : fixed a number of small problems with
	  Makefiles spotted by Albert Chin

Thu Aug 16 14:37:55 CEST 2001 Daniel Veillard <daniel@veillard.com>

	* win32/dsp/libxslt.def: minimal changes to compile 1.0.2 on
	  Windows/MSC

Thu Aug 16 12:58:11 CEST 2001 Daniel Veillard <daniel@veillard.com>