@@ -1,0 +1,6 @@
+<?xml version="1.0"?>
+<out>;
+  test;
+  5;
+  true;
+</out>
